add argument to fix java agent loading warning